--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <p>
                     I am a final-year master's student at Tsinghua University, supervised by <a href="https://scholar.google.com/citations?user=CHAajY4AAAAJ&hl=zh-CN" target="_blank">Prof. Qionghai Dai</a>. 
                     My master’s thesis has focused on large-scale scene reconstruction and rendering and the corresponding applications in VR to improve the sense of immersion. <br>
-                    <p>I am interest in computer vision and HCI, particularly in neural scene representation and its integration into human-centered design and interaction. 
+                    <p>I am interested in computer vision and HCI, particularly in neural scene representation and its integration into human-centered design and interaction. 
                     Also, I am enthusiastic about fairness and transparency in AI to ensure inclusivity.</p>
             
                 </p>
