--- a/index.html
+++ b/index.html
@@ -29,16 +29,19 @@
                     <div class="col-md-10" style="">
                         
                 <p>
-                    I am a final-year master's student at Tsinghua University, supervised by <a href="https://scholar.google.com/citations?user=CHAajY4AAAAJ&hl=zh-CN" target="_blank">Prof. Qionghai Dai</a>. 
-                    My master’s thesis has focused on large-scale scene reconstruction and rendering and the corresponding applications in VR to improve the sense of immersion. <br>
-                    <p>I am interested in computer vision and HCI, particularly in neural scene representation and its integration into human-centered design and interaction. 
+                    I am a first-year PhD student at <a href="https://www.mackenziemathislab.org/" target="_blank">Mathis Laboratory of adaptive intelligence </a> at EPFL, Switzerland. 
+                    My advisor is <a href="https://www.mackenziemathislab.org/mackenziemathis" target="_blank">Prof. Mackenzie Mathis</a>.</p>
+                <p>    
+                    I got my Master's degree of Data Science from Tsinghua University, where I was supervised by <a href="https://scholar.google.com/citations?user=CHAajY4AAAAJ&hl=zh-CN" target="_blank">Prof. Qionghai Dai</a>. 
+                    My master’s thesis has focused on large-scale scene reconstruction and rendering and the corresponding applications in VR to improve the sense of immersion. <br></p>
+                    <p>I am interested in 3D/4D reconstruction, particularly recovering shape and motion from partial observations like videos.
                     Also, I am enthusiastic about fairness and transparency in AI to ensure inclusivity.</p>
             
                 </p>
                 <p>For any inquiries, feel free to reach out to me via mail!</p>
                 <p>
                     <a href="https://lexiyutou.github.io/assets/pdf/Xiaohang_Yu_CV.pdf" target="_blank" style="margin-right: 5px"><i class="fa fa-address-card fa-lg"></i> CV</a>
-                    <a href="mailto:yuxh21@mails.tsinghua.edu.cn" style="margin-right: 5px"><i class="far fa-envelope-open fa-lg"></i> Mail</a>
+                    <a href="mailto:xiaohang.yu@epfl.ch" style="margin-right: 5px"><i class="far fa-envelope-open fa-lg"></i> Mail</a>
                     <a href="https://scholar.google.com/citations?user=Gi_MoOsAAAAJ&hl=zh-CN" target="_blank" style="margin-right: 5px"><i class="fa-solid fa-book"></i> Scholar</a>
                     <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#demo" data-toggle="collapse" style="margin-left: -6px; margin-top: -2px;"><i class="fa-solid fa-trophy"></i>Awards</button>
                     <div id="demo" class="collapse">
@@ -66,15 +69,15 @@
 	title = {Den-SOFT: Dense Space-Oriented Light Field DataseT for 6-DOF Immersive Experience}, 
 	booktitle = {arXiv}, 
 	year = {2024}, 
-}</pre></code></div></div> </div> </div> </div><div style="margin-bottom: 3em;"> <div class="row"><div class="col-sm-3"><img src="assets/img/publications/immersivenerf.png" class="img-fluid img-thumbnail" alt="Project image"></div><div class="col-sm-9"><a href="https://arxiv.org/abs/2309.01374" target="_blank">ImmersiveNeRF: Hybrid Radiance Fields for Unbounded Immersive Light Field Reconstruction</a> <br><span style="font-weight: bold";>Xiaohang Yu</span>, Haoxiang Wang, Yuqi Han, Lei Yang, Tao Yu, Qionghai Dai <br><span style="font-style: italic;">arXiv</span>, 2023 <br><a href="https://arxiv.org/abs/2309.01374" target="_blank">Project Page</a> /<button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseyu2023immersivenerf" aria-expanded="false" aria-controls="collapseExample" style="margin-left: -6px; margin-top: -2px;">Expand bibtex</button><div class="collapse" id="collapseyu2023immersivenerf"><div class="card card-body"><pre><code>@InProceedings{yu2023immersivenerf, 
+}</pre></code></div></div> </div> </div> </div><div style="margin-bottom: 3em;"> <div class="row"><div class="col-sm-3"><img src="assets/img/publications/immersivenerf.png" class="img-fluid img-thumbnail" alt="Project image"></div><div class="col-sm-9"><a href="https://ieeexplore.ieee.org/document/10648850" target="_blank">ImmersiveNeRF: Hybrid Radiance Fields for Unbounded Immersive Light Field Reconstruction</a> <br><span style="font-weight: bold";>Xiaohang Yu</span>, Haoxiang Wang, Yuqi Han, Lei Yang, Tao Yu, Qionghai Dai <br><span style="font-style: italic;">TVCG</span>, 2024 <br><a href="https://ieeexplore.ieee.org/document/10648850" target="_blank">Project Page</a> /<button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseyu2023immersivenerf" aria-expanded="false" aria-controls="collapseExample" style="margin-left: -6px; margin-top: -2px;">Expand bibtex</button><div class="collapse" id="collapseyu2023immersivenerf"><div class="card card-body"><pre><code>@InProceedings{yu2023immersivenerf, 
 	author = {Xiaohang Yu and Haoxiang Wang and Yuqi Han and Lei Yang and Tao Yu and Qionghai Dai}, 
 	title = {ImmersiveNeRF: Hybrid Radiance Fields for Unbounded Immersive Light Field Reconstruction}, 
-	booktitle = {arXiv}, 
-	year = {2023}, 
-}</pre></code></div></div> </div> </div> </div><div style="margin-bottom: 3em;"> <div class="row"><div class="col-sm-3"><img src="assets/img/publications/supernerf.png" class="img-fluid img-thumbnail" alt="Project image"></div><div class="col-sm-9"><a href="https://arxiv.org/abs/2304.13518" target="_blank">Super-NeRF: View-consistent Detail Generation for NeRF super-resolution</a> <br>Yuqi Han, Tao Yu, <span style="font-weight: bold";>Xiaohang Yu</span>, Yuwang Wang, Qionghai Dai <br><span style="font-style: italic;">arXiv</span>, 2023 <br><a href="https://arxiv.org/abs/2304.13518" target="_blank">Project Page</a> /<button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapsehan2023super" aria-expanded="false" aria-controls="collapseExample" style="margin-left: -6px; margin-top: -2px;">Expand bibtex</button><div class="collapse" id="collapsehan2023super"><div class="card card-body"><pre><code>@InProceedings{han2023super, 
+	booktitle = {TVCG}, 
+	year = {2024}, 
+}</pre></code></div></div> </div> </div> </div><div style="margin-bottom: 3em;"> <div class="row"><div class="col-sm-3"><img src="assets/img/publications/supernerf.png" class="img-fluid img-thumbnail" alt="Project image"></div><div class="col-sm-9"><a href="https://arxiv.org/abs/2304.13518" target="_blank">Super-NeRF: View-consistent Detail Generation for NeRF super-resolution</a> <br>Yuqi Han, Tao Yu, <span style="font-weight: bold";>Xiaohang Yu</span>, Yuwang Wang, Qionghai Dai <br><span style="font-style: italic;">TVCG</span>, 2023 <br><a href="https://arxiv.org/abs/2304.13518" target="_blank">Project Page</a> /<button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapsehan2023super" aria-expanded="false" aria-controls="collapseExample" style="margin-left: -6px; margin-top: -2px;">Expand bibtex</button><div class="collapse" id="collapsehan2023super"><div class="card card-body"><pre><code>@InProceedings{han2023super, 
 	author = {Yuqi Han and Tao Yu and Xiaohang Yu and Yuwang Wang and Qionghai Dai}, 
 	title = {Super-NeRF: View-consistent Detail Generation for NeRF super-resolution}, 
-	booktitle = {arXiv}, 
+	booktitle = {TVCG}, 
 	year = {2023}, 
 }</pre></code></div></div> </div> </div> </div><div style="margin-bottom: 3em;"> <div class="row"><div class="col-sm-3"><img src="assets/img/publications/Drones.png" class="img-fluid img-thumbnail" alt="Project image"></div><div class="col-sm-9"><a href="https://www.mdpi.com/2504-446X/8/1/22" target="_blank">Event-Assisted Object Tracking on High-Speed Drones in Harsh Illumination Environment</a> <br>Yuqi Han, <span style="font-weight: bold";>Xiaohang Yu</span>, Heng Luan, Jinli Suo <br><span style="font-style: italic;">Drones</span>, 2024 <br><a href="https://www.mdpi.com/2504-446X/8/1/22" target="_blank">Project Page</a> /<button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapsedrones8010022" aria-expanded="false" aria-controls="collapseExample" style="margin-left: -6px; margin-top: -2px;">Expand bibtex</button><div class="collapse" id="collapsedrones8010022"><div class="card card-body"><pre><code>@InProceedings{drones8010022, 
 	author = {Yuqi Han and Xiaohang Yu and Heng Luan and Jinli Suo}, 
