--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@
                     <div class="col-md-10" style="">
                         
                 <p>
-                    I am a first-year PhD student at <a href="https://www.mackenziemathislab.org/" target="_blank">Mathis Laboratory of adaptive intelligence </a> at EPFL, Switzerland. 
-                    My advisor is <a href="https://www.mackenziemathislab.org/mackenziemathis" target="_blank">Prof. Mackenzie Mathis</a>.</p>
+                    I am a first-year PhD student at EPFL, Switzerland. 
                 <p>    
                     I got my Master's degree of Data Science from Tsinghua University, where I was supervised by <a href="https://scholar.google.com/citations?user=CHAajY4AAAAJ&hl=zh-CN" target="_blank">Prof. Qionghai Dai</a>. 
                     My master’s thesis has focused on large-scale scene reconstruction and rendering and the corresponding applications in VR to improve the sense of immersion. <br></p>
